--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,7 @@ main{
    grid-area: main;
    display: flex;
    flex-direction: column;
-   padding: 10px;
    margin-bottom: 10px;
- 
 }
 
 main img{
@@ -68,12 +66,68 @@ main img{
 .navEnlace:hover{
     background-color: black;
 }
-.pan{
-    width: 50%;
-    height: 50%;
-    margin-left: 25%;
-    padding: 10px;
+
+.banner{
+    width: 100%;
+    height: 600px;
+    animation: banner 10s infinite linear alternate;
+    background-size: 100% 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+@keyframes banner{
+    0%, 20%{
+        background-image: url(../img/2.jpg);
+    }
+    25%, 45%{
+        background-image: url(../img/food-bread-baking-pretzel-still-life-hd-wallpaper-preview.jpg);
+    }
+    50%, 70%{
+        background-image: url(../img/HD-wallpaper-bakery-store-building-bakery-store-shop.jpg);
+    }
+    75%, 100%{
+        background-image: url(../img/HD-wallpaper-breads-bakery-graphy-food-healthy-bread.jpg);
+    }
+}
+
+.capa{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.6)
+}
+
+.info{
+    z-index: 1;
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+}
+
+.info h1{
+    color: white;
+    font-size: 45px;
+    margin-bottom: 20px;
+}
+
+.info p{
+    color: #c7c7c7;
+    line-height: 1.7;
+    margin-bottom: 30px;
+}
+
+.info a{
+    color: #fff;
+    background: #3088e0;
+    padding: 16px 37px;
+    display: inline-block;
+    border-radius: 50px;
+}
+
 .contenedor{
     display: flex;
     flex-wrap: wrap;
@@ -93,6 +147,7 @@ main img{
         margin-top: 20px;
        
 }
+
 .box:hover{
         transform:translateY(8px)
 }
